--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "framer-motion": "^12.23.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
