--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
