--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
@@ -29,6 +30,7 @@
     "react-tinder-card": "^1.6.4",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
